<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/coral"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tb_titulo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="14sp"
            android:background="@color/gold"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:background="@color/goldenrod"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/colombia_flags_flag_16986" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/europe_flags_flag_16997" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/canada_flags_flag_16983" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/china_flags_flag_16985" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/united_states_flags_flag_17080" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/united_kingdom_flags_flag_17079" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_divisas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12sp"
            android:layout_marginEnd="12sp"
            android:background="@color/goldenrod"
            android:checkedButton="@id/rb_cop"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_cop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/pesos_colombianos"
                android:textAllCaps="false"
                android:textIsSelectable="false"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_eur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                tools:text="@string/Euros" />

            <RadioButton
                android:id="@+id/rb_cad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dolar_canadiense"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_cny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yuanes"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dolares"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_vef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                tools:text="@string/Libra_esterlina" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_valor_a_convertir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64sp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="64sp"
            android:autofillHints=""
            android:background="@color/goldenrod"
            android:ems="10"
            android:hint="@string/valor"
            android:inputType="number"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textIsSelectable="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/bt_conversion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28sp"
            android:layout_marginTop="14sp"
            android:layout_marginEnd="28sp"
            android:background="@color/palegoldenrod"
            android:text="@string/convertir"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/colombia_flags_flag_16986" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/tv_cop"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_margin="14sp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/europe_flags_flag_16997" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/tv_eur"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_margin="14sp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/canada_flags_flag_16983" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/tv_cad"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_margin="14sp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/china_flags_flag_16985" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/tv_cny"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_margin="14sp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/united_states_flags_flag_17080" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/tv_usd"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_margin="14sp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/united_kingdom_flags_flag_17079" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="TODO"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/tv_gbp"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:layout_margin="14sp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>